@@ -1527,7 +1527,8 @@ class DataFrame(DataProcessor, pd.DataFrame):
                 if col.specifier == para:
                     return True
             except AttributeError:
-                if col[0:2] == para + "_":  # we should no allow this :(
+                if col.startswith(str(para) + "_"):
+                    # we should no allow this :(
                     return True
 
         return False
@@ -1551,58 +1552,61 @@ class DataFrame(DataProcessor, pd.DataFrame):
         """
         # check existence of the paras
         para_desired = para
-        try:
-            para_avail = [
-                ss_para
-                for ss_para in [para] + [speci for speci in specifiers_ss_para]
-                if self.check_ss_cols(ss_para)
-            ]
-            if len(para_avail) == 0:
-                raise StopIteration
-            elif len(para_avail) == 1:
-                para_avail = para_avail[0]
-            else:
-                if para_desired in para_avail:
-                    para_avail = para_desired
-                else:
-                    para_avail = para_avail[0]
-        except StopIteration:
+        paras_avail = [
+            ss_para for ss_para in {para} | set(specifiers_ss_para) if self.check_ss_cols(ss_para)
+        ]
+        if len(paras_avail) == 0:
             logging.warning("Warning: DMT->DataFrame: No SS-Parameters were found in DataFrame.")
-            raise StopIteration
+            raise StopIteration("DMT->DataFrame: No SS-Parameters were found in DataFrame.")
 
-        list_ports = [port_1]
-        columns = self.columns
-        for node in ports_n:
-            # check if full set of this parameter is here for this node
-            col_0 = SpecifierStr(para_avail.upper(), port_1, node)
-            col_1 = SpecifierStr(para_avail.upper(), node, port_1)
-            col_2 = SpecifierStr(para_avail.upper(), node, node)
+        if para_desired in paras_avail:
+            paras_avail.remove(para_desired)
+            paras_avail.insert(0, para_desired)
 
-            # did not check for node[i], node[j] on purpose, because node[j] may be not part of the full set..
-            if (
-                col_0 in columns and col_1 in columns and col_2 in columns
-            ):  # pylint: disable=unsupported-membership-test
-                list_ports.append(node)
+        columns = set(self.columns)
+        para_found = None
+        for para_test in paras_avail:
+            spec_test = SpecifierStr(para_test.upper())
+            if not bool(spec_test + [port_1, port_1] & columns):
+                continue
+
+            list_ports = {port_1}
+            for node in ports_n:
+                # check if full set of this parameter is here for this node
+                col_0 = spec_test + [port_1, node]
+                col_1 = spec_test + [node, port_1]
+                col_2 = spec_test + [node, node]
+                # did not check for node[i], node[j] on purpose, because node[j] may be not part of the full set..
+
+                if len({col_0, col_1, col_2} & columns) == 3:
+                    list_ports.add(node)
+
+            if list_ports == set(ports_n + [port_1]):
+                para_found = spec_test
+                break
+
+        if not para_found:
+            raise IOError(
+                "DMT-DataFrame->get_ss_para: I found some SS-Paras but none with full set for all required ports."
+            )
 
         # get the existing parameters from df and put them into a numpy array
         try:
             n_freq = len(self[specifiers.FREQUENCY])
         except KeyError:
-            raise IOError("DMT -> data_frame -> get_ss_para: no column FREQ in data frame.")
+            raise IOError("DMT->DataFrame->get_ss_para: no column FREQ in data frame.")
 
         n_port = len(list_ports)
 
         para_values = np.zeros((n_freq, n_port, n_port), dtype=np.complex128)
         for i in range(n_port):
             for j in range(n_port):
-                para_values[:, i, j] = self.loc[
-                    :, SpecifierStr(para_avail.upper(), list_ports[i], list_ports[j])
-                ]
+                para_values[:, i, j] = self.loc[:, para_found + [list_ports[i], list_ports[j]]]
 
         # we found some parameters, however not the desired ones. Try converting
-        if para_avail != para_desired:
+        if para_found != para_desired:
             para_values = self.processor.convert_n_port_para(
-                para_values, p_from=str(para_avail), p_to=str(para_desired)
+                para_values, p_from=str(para_found), p_to=str(para_desired)
             )
 
         return para_values
@@ -1636,7 +1640,7 @@ class DataFrame(DataProcessor, pd.DataFrame):
 
         return self
 
-    def strip_ss_para(self, keep="S"):
+    def strip_ss_para(self, keep=specifiers_ss_para.SS_PARA_S):
         """Throw away all but keep small signal parameters.
 
         Parameters
@@ -1652,7 +1656,7 @@ class DataFrame(DataProcessor, pd.DataFrame):
         ss_paras = self.get_all_ss_para()
         drop = []
         for para in ss_paras:
-            if para.specifier != keep:
+            if para.specifier != str(keep):
                 drop.append(para)
 
         return self.drop(columns=drop)
@@ -1724,15 +1728,17 @@ class DataFrame(DataProcessor, pd.DataFrame):
         return self
 
     def calc_tfit(self, tfit_kind: int, ports):
-        port1 = ports[0]
-        port2 = ports[1]
         if tfit_kind == 1:
-            return self.calc_tfit1(port1, port2)
+            return self.calc_tfit1(*ports)
         elif tfit_kind == 2:
-            return self.calc_tfit2(port1, port2)
+            return self.calc_tfit2(*ports)
         elif tfit_kind == 3:
             self.ensure_specifier_column(specifiers.TRANSIT_TIME, ports=ports)
             return self
+        else:
+            raise NotImplementedError(
+                "DMT-DataFrame-calc_tfit: Only kind 1,2 and 3 is implemented!"
+            )
 
     def calc_tfit1(self, port_1, port_2):
         """Calculates the transit frequency FT using the spot frequency method.
@@ -1924,9 +1930,15 @@ class DataFrame(DataProcessor, pd.DataFrame):
         pd.options.mode.chained_assignment = (
             None  # default='warn' , Markus: This should not warn here.
         )
-        self[specifiers.CAPACITANCE + ["C", "E"]] = self.processor.calc_cap_shunt_port_2(
-            self["FREQ"], s_para_values, "S"
-        )
+        if port_1 == "B" and port_2 == "C":
+            self[specifiers.CAPACITANCE + ["C", "E"]] = self.processor.calc_cap_shunt_port_2(
+                self["FREQ"], s_para_values, "S"
+            )
+        else:
+            raise NotImplementedError(
+                "DMT -> DataFrame -> calc_cce: transistor configuration not implemented."
+            )
+
         pd.options.mode.chained_assignment = "warn"
         return self
 
@@ -2043,7 +2055,7 @@ class DataFrame(DataProcessor, pd.DataFrame):
             for port2 in ports:
                 for kind in [sub_specifiers.REAL, sub_specifiers.IMAG]:
                     self.ensure_specifier_column(
-                        specifiers_ss_para.SS_PARA_Y + port1 + port2 + kind,
+                        specifiers_ss_para.SS_PARA_Y + [port1, port2] + kind,
                         ports=["B", "C"],
                     )
 
@@ -2060,14 +2072,14 @@ class DataFrame(DataProcessor, pd.DataFrame):
         for port1 in ports:
             for port2 in ports:
                 for kind in [sub_specifiers.REAL, sub_specifiers.IMAG]:
-                    y_para = specifiers_ss_para.SS_PARA_Y + port1 + port2 + kind
+                    y_para = specifiers_ss_para.SS_PARA_Y + [port1, port2] + kind
                     df_new[y_para] = 0
 
         # actual smoothing
         for port1 in ports:
             for port2 in ports:
                 for kind in [sub_specifiers.REAL, sub_specifiers.IMAG]:
-                    y_para = specifiers_ss_para.SS_PARA_Y + port1 + port2 + kind
+                    y_para = specifiers_ss_para.SS_PARA_Y + [port1, port2] + kind
                     for i in range(n_slices):
                         i_low = n_freq * i
                         i_upp = n_freq * (i + 1)
@@ -2101,9 +2113,9 @@ class DataFrame(DataProcessor, pd.DataFrame):
         # merge real and complex part, remove afterwards
         for port1 in ["B", "C"]:
             for port2 in ["B", "C"]:
-                y_para = specifiers_ss_para.SS_PARA_Y + port1 + port2
-                y_para_re = specifiers_ss_para.SS_PARA_Y + port1 + port2 + sub_specifiers.REAL
-                y_para_im = specifiers_ss_para.SS_PARA_Y + port1 + port2 + sub_specifiers.IMAG
+                y_para = specifiers_ss_para.SS_PARA_Y + [port1, port2]
+                y_para_re = specifiers_ss_para.SS_PARA_Y + [port1, port2] + sub_specifiers.REAL
+                y_para_im = specifiers_ss_para.SS_PARA_Y + [port1, port2] + sub_specifiers.IMAG
                 df_new[y_para] = df_new[y_para_re] + 1j * df_new[y_para_im]
                 df_new.drop(columns=[y_para_im, y_para_re])
 
